 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBXNEXT-448] Added trigger function logeventid that matches the last event ID to a regex (rudolfs)
 - [ZBX-1419] improve and fix database upgrade patches for older versions (Richlv)
 - [ZBX-3576] fixed showing triggers with disabled items in monitoring (Vedmak)
 - [ZBX-3483] added missing fields in items mass update (Vedmak)
 - [ZBX-3435] fixed error that sometimes appear after profile edit (Vedmak)
 - [ZBX-2616] bundled DejaVu font upgraded from 2.32 to 2.33 (Richlv)
 - [ZBX-1557] changed process_ping logic to return an error if fping doesn't give a value (or '-') for any of the hosts but outputs something (rudolfs)
 - [ZBX-3430] fixed disappeared hints for "SSH", "Telnet" and "Database Monitor" item types in item form (Vedmak)
 - [ZBX-3578] added arguments to the output when using agent with '-p' or '-t', modified default arguments in win32.c and common.c (rudolfs)
 - [ZBX-3514] removed non "regexp" triggers from item log-form menu (Aly)
 - [ZBX-3584] fixed allowed_hosts set to 'localhost' for items by default (Vedmak)
 - [ZBX-3568] fixed processing of trigger functions with macros in item key parameters in notifications (Sasha)
 - [ZBX-3076] disabled generation of events in case if some items or hosts in trigger expression are not active (Sasha)
 - [ZBX-3562] fixed user macros in map element label expressions (Aly)
 - [ZBXNEXT-508] added dayofmonth to trigger functions (rudolfs)
 - [ZBX-3352] made item Y axis min/max items also change when used in screen with Dynamic enabled (Vedmak)