@@ -184,7 +184,7 @@ Hostname=Zabbix server
 #	Number of pre-forked instances of zabbix_agentd that process passive checks.
 #
 # Mandatory: no
-# Range: 1-16
+# Range: 1-25
 # Default:
 # StartAgents=3
 
