@@ -205,7 +205,7 @@ DBUser=root
 #	Number of pre-forked instances of pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPollers=5
 
@@ -213,7 +213,7 @@ DBUser=root
 #	Number of pre-forked instances of IPMI pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartIPMIPollers=0
 
@@ -221,15 +221,15 @@ DBUser=root
 #	Number of pre-forked instances of pollers for unreachable hosts (including IPMI).
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPollersUnreachable=1
 
 ### Option: StartTrappers
-#	Number of pre-forked instances of trappers
+#	Number of pre-forked instances of trappers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartTrappers=5
 
@@ -237,7 +237,7 @@ DBUser=root
 #	Number of pre-forked instances of ICMP pingers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPingers=1
 
@@ -245,7 +245,7 @@ DBUser=root
 #	Number of pre-forked instances of discoverers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-250
 # Default:
 # StartDiscoverers=1
 
@@ -253,7 +253,7 @@ DBUser=root
 #	Number of pre-forked instances of HTTP pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartHTTPPollers=1
 
@@ -295,7 +295,7 @@ DBUser=root
 #	Number of pre-forked instances of DB Syncers
 #
 # Mandatory: no
-# Range: 1-64
+# Range: 1-100
 # Default:
 # StartDBSyncers=4
 
