@@ -130,7 +130,7 @@ DBUser=root
 #	Number of pre-forked instances of pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPollers=5
 
@@ -138,7 +138,7 @@ DBUser=root
 #	Number of pre-forked instances of IPMI pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartIPMIPollers=0
 
@@ -146,15 +146,15 @@ DBUser=root
 #	Number of pre-forked instances of pollers for unreachable hosts (including IPMI).
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPollersUnreachable=1
 
 ### Option: StartTrappers
-#	Number of pre-forked instances of trappers
+#	Number of pre-forked instances of trappers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartTrappers=5
 
@@ -162,7 +162,7 @@ DBUser=root
 #	Number of pre-forked instances of ICMP pingers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartPingers=1
 
@@ -170,7 +170,7 @@ DBUser=root
 #	Number of pre-forked instances of discoverers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-250
 # Default:
 # StartDiscoverers=1
 
@@ -178,7 +178,7 @@ DBUser=root
 #	Number of pre-forked instances of HTTP pollers.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-1000
 # Default:
 # StartHTTPPollers=1
 
@@ -251,7 +251,7 @@ DBUser=root
 #	Number of pre-forked instances of DB Syncers
 #
 # Mandatory: no
-# Range: 1-64
+# Range: 1-100
 # Default:
 # StartDBSyncers=4
 
@@ -408,7 +408,7 @@ DBUser=root
 #	Number of pre-forked instances of pollers for passive proxies.
 #
 # Mandatory: no
-# Range: 0-255
+# Range: 0-250
 # Default:
 # StartProxyPollers=1
 
