@@ -207,21 +207,21 @@ static void	init_config()
 		/* PARAMETER,			VAR,					FUNC,
 			TYPE,		MANDATORY,	MIN,			MAX */
 		{"StartDBSyncers",		&CONFIG_HISTSYNCER_FORKS,		NULL,
-			TYPE_INT,	PARM_OPT,	1,			64},
+			TYPE_INT,	PARM_OPT,	1,			100},
 		{"StartDiscoverers",		&CONFIG_DISCOVERER_FORKS,		NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			250},
 		{"StartHTTPPollers",		&CONFIG_HTTPPOLLER_FORKS,		NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"StartPingers",		&CONFIG_PINGER_FORKS,			NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"StartPollers",		&CONFIG_POLLER_FORKS,			NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"StartPollersUnreachable",	&CONFIG_UNREACHABLE_POLLER_FORKS,	NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"StartIPMIPollers",		&CONFIG_IPMIPOLLER_FORKS,		NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"StartTrappers",		&CONFIG_TRAPPER_FORKS,			NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			1000},
 		{"CacheSize",			&CONFIG_CONF_CACHE_SIZE,		NULL,
 			TYPE_INT,	PARM_OPT,	128 * ZBX_KIBIBYTE,	ZBX_GIBIBYTE},
 		{"HistoryCacheSize",		&CONFIG_HISTORY_CACHE_SIZE,		NULL,
@@ -301,7 +301,7 @@ static void	init_config()
 		{"LogSlowQueries",		&CONFIG_LOG_SLOW_QUERIES,		NULL,
 			TYPE_INT,	PARM_OPT,	0,			3600000},
 		{"StartProxyPollers",		&CONFIG_PROXYPOLLER_FORKS,		NULL,
-			TYPE_INT,	PARM_OPT,	0,			255},
+			TYPE_INT,	PARM_OPT,	0,			250},
 		{"ProxyConfigFrequency",	&CONFIG_PROXYCONFIG_FREQUENCY,		NULL,
 			TYPE_INT,	PARM_OPT,	1,			SEC_PER_WEEK},
 		{"ProxyDataFrequency",		&CONFIG_PROXYDATA_FREQUENCY,		NULL,
