@@ -101,7 +101,8 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
- - [ZBXNEXT-448] Added trigger function logeventid that matches the last event ID to a regex (rudolfs)
+ - [ZBX-3621] changed the maximum number of processes for Zabbix daemons (asaveljevs)
+ - [ZBXNEXT-448] added trigger function logeventid that matches the last event ID to a regex (rudolfs)
  - [ZBX-1419] improve and fix database upgrade patches for older versions (Richlv)
  - [ZBX-3576] fixed showing triggers with disabled items in monitoring (Vedmak)
  - [ZBX-3483] added missing fields in items mass update (Vedmak)
